apps-old/loki/envs/prd/ingress.yaml
# Loki Ingress
# Link: https://doc.traefik.io/traefik/routing/providers/kubernetes-crd/
#
# Exposes Loki query API via Traefik IngressRoute

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: loki
  labels:
    app.kubernetes.io/name: loki
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`loki.elposhox.dev`)
      kind: Rule
      services:
        - name: loki
          port: 3100
  tls:
    certResolver: letsencrypt-prod
